--- a/web/css/tac.css
+++ b/web/css/tac.css
@@ -1,3 +1,6 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+
 .result-hover:hover {
     background: #d6d6d6;
     border-radius: 5px;
